# pdnsmanager

./: .gitignore  README.fr.md  README.md  client.py  config.py  main.py  pyproject.toml  requirements.txt  utils.py
locales/: en.json  fr.json
pdnsmgr/: __init__.py  __main__.py  client.py  config.py  database.py  dependencies.py  main.py  rbac.py  routes.py  utils.py
pdnsmgr/locales/: en.json  fr.json
pdnsmgr/templates/: admin.html  base.html  index.html  zone_details.html
src/pdnsmgr/: __init__.py  config.py  dependencies.py  main.py  rbac.py  routes.py  utils.py
src/pdnsmgr/locales/: en.json
src/pdnsmgr/templates/: zone_details.html
templates/: admin.html  index.html  login.html  profile.html  zone_details.html
